--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ar.com.entregable</groupId>
-    <artifactId>AplicacionWeb</artifactId>
+    <artifactId>app</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>EntregableCodoACodo</name>
     <packaging>war</packaging>
