--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,10 @@
     <name>EntregableCodoACodo</name>
     <packaging>war</packaging>
     <properties>
+        <maven.compiler.source>14</maven.compiler.source>
+        <maven.compiler.targe>14</maven.compiler.targe>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
     <build>
